<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_show_ks_scenarios"
        android:title="@string/pref_show_ks_scenarios"
        android:summary="@string/pref_show_ks_scenarios_summary"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pref_show_timer"
        android:title="@string/pref_show_timer"
        android:summary="@string/pref_show_timer_summary"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pref_show_growl_timer"
        android:title="@string/pref_show_growl_timer"
        android:summary="@string/pref_show_growl_timer_summary"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pref_show_ff_rew"
        android:title="@string/pref_show_ff_rew"
        android:summary="@string/pref_show_ff_rew_summary"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pref_setup_scenario_onboarding_shown"
        android:title="@string/pref_setup_scenario_onboarding_shown"
        android:summary="@string/pref_setup_scenario_onboarding_shown_summary"
        android:defaultValue="false"/>

</PreferenceScreen>
